tests/script_runtime_errors/assign_expr/error.txt
Error: 
    1 | let ([1,2])[0] = 3;
      |     ^^^^^^^^^^^^^^ Can't assign to a constant expression